src/antlr4/gen/JSXXParser.js
// Generated from /Users/hsiaosiyuan/WebstormProjects/jsxx/src/antlr4/JSXXParser.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var JSXXParserVisitor = require('./JSXXParserVisitor').JSXXParserVisitor;

var grammarFileName = "JSXXParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, null, null, null, null, null, 
                     null, "'/>'", null, null, "'='", null, null, null, 
                     null, "'}'", "'for'", "'in'", "'if'", "'elseif'", "'else'", 
                     "'end'", "'['", "']'", "'('", "')'", "','", "'.'", 
                     "'+'", "'-'", "'*'", null, "'%'", null, null, "'=='", 
                     "'!='", "'<='", "'>='", "'&&'", "'||'", "'?'", "':'", 
                     "'null'", "'undefined'" ];

var symbolicNames = [ null, "MultiLineComment", "SingleLineComment", "HTMLComment", 
                      "HTMLCharRef", "HTMLWhitespace", "HTMLText", "HTMLExprOpen", 
                      "TagOpen", "TagClose", "TagSlashClose", "TagSlash", 
                      "TagInsideName", "AttrEquals", "TagWhitespace", "AttrVal", 
                      "AttrValContent", "AttrExprOpen", "ExprClose", "For", 
                      "In", "If", "Elseif", "Else", "End", "OpenBracket", 
                      "CloseBracket", "OpenParen", "CloseParen", "Comma", 
                      "Dot", "Plus", "Minus", "Multiply", "Divide", "Modulus", 
                      "LessThan", "MoreThan", "ExprEquals", "NotEquals", 
                      "LessThanEquals", "GreaterThanEquals", "And", "Or", 
                      "QuestionMark", "Colon", "NullLiteral", "UndefinedLiteral", 
                      "BooleanLiteral", "IntegerLiteral", "HexIntegerLiteral", 
                      "RealLiteral", "Identifier", "StringLiteral", "WhiteSpaces", 
                      "ExprMultiLineComment", "ExprSingleLineComment" ];

var ruleNames =  [ "root", "element", "content", "stmt", "forStmt", "forBegin", 
                   "exprOpen", "exprClose", "endExpr", "ifStmt", "ifBegin", 
                   "elseif", "elseBranch", "attribute", "expr", "singleExpr", 
                   "arguments", "argumentList", "literal", "numericLiteral", 
                   "comment", "reference", "charData", "misc" ];

function JSXXParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

JSXXParser.prototype = Object.create(antlr4.Parser.prototype);
JSXXParser.prototype.constructor = JSXXParser;

Object.defineProperty(JSXXParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

JSXXParser.EOF = antlr4.Token.EOF;
JSXXParser.MultiLineComment = 1;
JSXXParser.SingleLineComment = 2;
JSXXParser.HTMLComment = 3;
JSXXParser.HTMLCharRef = 4;
JSXXParser.HTMLWhitespace = 5;
JSXXParser.HTMLText = 6;
JSXXParser.HTMLExprOpen = 7;
JSXXParser.TagOpen = 8;
JSXXParser.TagClose = 9;
JSXXParser.TagSlashClose = 10;
JSXXParser.TagSlash = 11;
JSXXParser.TagInsideName = 12;
JSXXParser.AttrEquals = 13;
JSXXParser.TagWhitespace = 14;
JSXXParser.AttrVal = 15;
JSXXParser.AttrValContent = 16;
JSXXParser.AttrExprOpen = 17;
JSXXParser.ExprClose = 18;
JSXXParser.For = 19;
JSXXParser.In = 20;
JSXXParser.If = 21;
JSXXParser.Elseif = 22;
JSXXParser.Else = 23;
JSXXParser.End = 24;
JSXXParser.OpenBracket = 25;
JSXXParser.CloseBracket = 26;
JSXXParser.OpenParen = 27;
JSXXParser.CloseParen = 28;
JSXXParser.Comma = 29;
JSXXParser.Dot = 30;
JSXXParser.Plus = 31;
JSXXParser.Minus = 32;
JSXXParser.Multiply = 33;
JSXXParser.Divide = 34;
JSXXParser.Modulus = 35;
JSXXParser.LessThan = 36;
JSXXParser.MoreThan = 37;
JSXXParser.ExprEquals = 38;
JSXXParser.NotEquals = 39;
JSXXParser.LessThanEquals = 40;
JSXXParser.GreaterThanEquals = 41;
JSXXParser.And = 42;
JSXXParser.Or = 43;
JSXXParser.QuestionMark = 44;
JSXXParser.Colon = 45;
JSXXParser.NullLiteral = 46;
JSXXParser.UndefinedLiteral = 47;
JSXXParser.BooleanLiteral = 48;
JSXXParser.IntegerLiteral = 49;
JSXXParser.HexIntegerLiteral = 50;
JSXXParser.RealLiteral = 51;
JSXXParser.Identifier = 52;
JSXXParser.StringLiteral = 53;
JSXXParser.WhiteSpaces = 54;
JSXXParser.ExprMultiLineComment = 55;
JSXXParser.ExprSingleLineComment = 56;

JSXXParser.RULE_root = 0;
JSXXParser.RULE_element = 1;
JSXXParser.RULE_content = 2;
JSXXParser.RULE_stmt = 3;
JSXXParser.RULE_forStmt = 4;
JSXXParser.RULE_forBegin = 5;
JSXXParser.RULE_exprOpen = 6;
JSXXParser.RULE_exprClose = 7;
JSXXParser.RULE_endExpr = 8;
JSXXParser.RULE_ifStmt = 9;
JSXXParser.RULE_ifBegin = 10;
JSXXParser.RULE_elseif = 11;
JSXXParser.RULE_elseBranch = 12;
JSXXParser.RULE_attribute = 13;
JSXXParser.RULE_expr = 14;
JSXXParser.RULE_singleExpr = 15;
JSXXParser.RULE_arguments = 16;
JSXXParser.RULE_argumentList = 17;
JSXXParser.RULE_literal = 18;
JSXXParser.RULE_numericLiteral = 19;
JSXXParser.RULE_comment = 20;
JSXXParser.RULE_reference = 21;
JSXXParser.RULE_charData = 22;
JSXXParser.RULE_misc = 23;

function RootContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JSXXParser.RULE_root;
    return this;
}

RootContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RootContext.prototype.constructor = RootContext;

RootContext.prototype.element = function() {
    return this.getTypedRuleContext(ElementContext,0);
};

RootContext.prototype.misc = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(MiscContext);
    } else {
        return this.getTypedRuleContext(MiscContext,i);
    }
};

RootContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JSXXParserVisitor ) {
        return visitor.visitRoot(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JSXXParser.RootContext = RootContext;

JSXXParser.prototype.root = function() {

    var localctx = new RootContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, JSXXParser.RULE_root);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 51;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JSXXParser.MultiLineComment) | (1 << JSXXParser.SingleLineComment) | (1 << JSXXParser.HTMLComment) | (1 << JSXXParser.HTMLWhitespace))) !== 0)) {
            this.state = 48;
            this.misc();
            this.state = 53;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 54;
        this.element();
        this.state = 58;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JSXXParser.MultiLineComment) | (1 << JSXXParser.SingleLineComment) | (1 << JSXXParser.HTMLComment) | (1 << JSXXParser.HTMLWhitespace))) !== 0)) {
            this.state = 55;
            this.misc();
            this.state = 60;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ElementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JSXXParser.RULE_element;
    return this;
}

ElementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ElementContext.prototype.constructor = ElementContext;


 
ElementContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function VoidElementContext(parser, ctx) {
	ElementContext.call(this, parser);
    ElementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

VoidElementContext.prototype = Object.create(ElementContext.prototype);
VoidElementContext.prototype.constructor = VoidElementContext;

JSXXParser.VoidElementContext = VoidElementContext;

VoidElementContext.prototype.TagOpen = function() {
    return this.getToken(JSXXParser.TagOpen, 0);
};

VoidElementContext.prototype.TagInsideName = function() {
    return this.getToken(JSXXParser.TagInsideName, 0);
};

VoidElementContext.prototype.TagSlashClose = function() {
    return this.getToken(JSXXParser.TagSlashClose, 0);
};

VoidElementContext.prototype.attribute = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AttributeContext);
    } else {
        return this.getTypedRuleContext(AttributeContext,i);
    }
};

VoidElementContext.prototype.TagClose = function() {
    return this.getToken(JSXXParser.TagClose, 0);
};
VoidElementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JSXXParserVisitor ) {
        return visitor.visitVoidElement(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function NormalElementContext(parser, ctx) {
	ElementContext.call(this, parser);
    ElementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

NormalElementContext.prototype = Object.create(ElementContext.prototype);
NormalElementContext.prototype.constructor = NormalElementContext;

JSXXParser.NormalElementContext = NormalElementContext;

NormalElementContext.prototype.TagOpen = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(JSXXParser.TagOpen);
    } else {
        return this.getToken(JSXXParser.TagOpen, i);
    }
};


NormalElementContext.prototype.TagInsideName = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(JSXXParser.TagInsideName);
    } else {
        return this.getToken(JSXXParser.TagInsideName, i);
    }
};


NormalElementContext.prototype.TagClose = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(JSXXParser.TagClose);
    } else {
        return this.getToken(JSXXParser.TagClose, i);
    }
};


NormalElementContext.prototype.content = function() {
    return this.getTypedRuleContext(ContentContext,0);
};

NormalElementContext.prototype.TagSlash = function() {
    return this.getToken(JSXXParser.TagSlash, 0);
};

NormalElementContext.prototype.attribute = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(AttributeContext);
    } else {
        return this.getTypedRuleContext(AttributeContext,i);
    }
};
NormalElementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JSXXParserVisitor ) {
        return visitor.visitNormalElement(this);
    } else {
        return visitor.visitChildren(this);
    }
};



JSXXParser.ElementContext = ElementContext;

JSXXParser.prototype.element = function() {

    var localctx = new ElementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, JSXXParser.RULE_element);
    var _la = 0; // Token type
    try {
        this.state = 94;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        switch(la_) {
        case 1:
            localctx = new NormalElementContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 61;
            this.match(JSXXParser.TagOpen);
            this.state = 62;
            this.match(JSXXParser.TagInsideName);
            this.state = 66;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===JSXXParser.TagInsideName) {
                this.state = 63;
                this.attribute();
                this.state = 68;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 69;
            this.match(JSXXParser.TagClose);
            this.state = 70;
            this.content();
            this.state = 71;
            this.match(JSXXParser.TagOpen);
            this.state = 72;
            this.match(JSXXParser.TagSlash);
            this.state = 73;
            this.match(JSXXParser.TagInsideName);
            this.state = 74;
            this.match(JSXXParser.TagClose);
            break;

        case 2:
            localctx = new VoidElementContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 76;
            this.match(JSXXParser.TagOpen);
            this.state = 77;
            this.match(JSXXParser.TagInsideName);
            this.state = 81;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===JSXXParser.TagInsideName) {
                this.state = 78;
                this.attribute();
                this.state = 83;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 84;
            this.match(JSXXParser.TagSlashClose);
            break;

        case 3:
            localctx = new VoidElementContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 85;
            this.match(JSXXParser.TagOpen);
            this.state = 86;
            this.match(JSXXParser.TagInsideName);
            this.state = 90;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===JSXXParser.TagInsideName) {
                this.state = 87;
                this.attribute();
                this.state = 92;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 93;
            this.match(JSXXParser.TagClose);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ContentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JSXXParser.RULE_content;
    return this;
}

ContentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ContentContext.prototype.constructor = ContentContext;

ContentContext.prototype.charData = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(CharDataContext);
    } else {
        return this.getTypedRuleContext(CharDataContext,i);
    }
};

ContentContext.prototype.element = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ElementContext);
    } else {
        return this.getTypedRuleContext(ElementContext,i);
    }
};

ContentContext.prototype.reference = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ReferenceContext);
    } else {
        return this.getTypedRuleContext(ReferenceContext,i);
    }
};

ContentContext.prototype.comment = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(CommentContext);
    } else {
        return this.getTypedRuleContext(CommentContext,i);
    }
};

ContentContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

ContentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JSXXParserVisitor ) {
        return visitor.visitContent(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JSXXParser.ContentContext = ContentContext;

JSXXParser.prototype.content = function() {

    var localctx = new ContentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, JSXXParser.RULE_content);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 97;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===JSXXParser.HTMLWhitespace || _la===JSXXParser.HTMLText) {
            this.state = 96;
            this.charData();
        }

        this.state = 110;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 103;
                this._errHandler.sync(this);
                switch(this._input.LA(1)) {
                case JSXXParser.TagOpen:
                    this.state = 99;
                    this.element();
                    break;
                case JSXXParser.HTMLCharRef:
                    this.state = 100;
                    this.reference();
                    break;
                case JSXXParser.MultiLineComment:
                case JSXXParser.SingleLineComment:
                case JSXXParser.HTMLComment:
                    this.state = 101;
                    this.comment();
                    break;
                case JSXXParser.HTMLExprOpen:
                case JSXXParser.AttrExprOpen:
                    this.state = 102;
                    this.stmt();
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
                }
                this.state = 106;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===JSXXParser.HTMLWhitespace || _la===JSXXParser.HTMLText) {
                    this.state = 105;
                    this.charData();
                }
         
            }
            this.state = 112;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JSXXParser.RULE_stmt;
    return this;
}

StmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StmtContext.prototype.constructor = StmtContext;

StmtContext.prototype.forStmt = function() {
    return this.getTypedRuleContext(ForStmtContext,0);
};

StmtContext.prototype.ifStmt = function() {
    return this.getTypedRuleContext(IfStmtContext,0);
};

StmtContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

StmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JSXXParserVisitor ) {
        return visitor.visitStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JSXXParser.StmtContext = StmtContext;

JSXXParser.prototype.stmt = function() {

    var localctx = new StmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, JSXXParser.RULE_stmt);
    try {
        this.state = 116;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 113;
            this.forStmt();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 114;
            this.ifStmt();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 115;
            this.expr();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ForStmtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JSXXParser.RULE_forStmt;
    return this;
}

ForStmtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ForStmtContext.prototype.constructor = ForStmtContext;

ForStmtContext.prototype.forBegin = function() {
    return this.getTypedRuleContext(ForBeginContext,0);
};

ForStmtContext.prototype.content = function() {
    return this.getTypedRuleContext(ContentContext,0);
};

ForStmtContext.prototype.endExpr = function() {
    return this.getTypedRuleContext(EndExprContext,0);
};

ForStmtContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JSXXParserVisitor ) {
        return visitor.visitForStmt(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JSXXParser.ForStmtContext = ForStmtContext;

JSXXParser.prototype.forStmt = function() {

    var localctx = new ForStmtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, JSXXParser.RULE_forStmt);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 118;
        this.forBegin();
        this.state = 119;
        this.content();
        this.state = 120;
        this.endExpr();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ForBeginContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JSXXParser.RULE_forBegin;
    return this;
}

ForBeginContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ForBeginContext.prototype.constructor = ForBeginContext;

ForBeginContext.prototype.exprOpen = function() {
    return this.getTypedRuleContext(ExprOpenContext,0);
};

ForBeginContext.prototype.For = function() {
    return this.getToken(JSXXParser.For, 0);
};

ForBeginContext.prototype.In = function() {
    return this.getToken(JSXXParser.In, 0);
};

ForBeginContext.prototype.singleExpr = function() {
    return this.getTypedRuleContext(SingleExprContext,0);
};

ForBeginContext.prototype.exprClose = function() {
    return this.getTypedRuleContext(ExprCloseContext,0);
};

ForBeginContext.prototype.Identifier = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(JSXXParser.Identifier);
    } else {
        return this.getToken(JSXXParser.Identifier, i);
    }
};


ForBeginContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JSXXParserVisitor ) {
        return visitor.visitForBegin(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JSXXParser.ForBeginContext = ForBeginContext;

JSXXParser.prototype.forBegin = function() {

    var localctx = new ForBeginContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, JSXXParser.RULE_forBegin);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 122;
        this.exprOpen();
        this.state = 123;
        this.match(JSXXParser.For);
        this.state = 130;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case JSXXParser.Identifier:
            this.state = 124;
            this.match(JSXXParser.Identifier);
            break;
        case JSXXParser.OpenParen:
            this.state = 125;
            this.match(JSXXParser.OpenParen);
            this.state = 126;
            this.match(JSXXParser.Identifier);
            this.state = 127;
            this.match(JSXXParser.Comma);
            this.state = 128;
            this.match(JSXXParser.Identifier);
            this.state = 129;
            this.match(JSXXParser.CloseParen);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 132;
        this.match(JSXXParser.In);
        this.state = 133;
        this.singleExpr(0);
        this.state = 134;
        this.exprClose();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExprOpenContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JSXXParser.RULE_exprOpen;
    return this;
}

ExprOpenContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprOpenContext.prototype.constructor = ExprOpenContext;

ExprOpenContext.prototype.HTMLExprOpen = function() {
    return this.getToken(JSXXParser.HTMLExprOpen, 0);
};

ExprOpenContext.prototype.AttrExprOpen = function() {
    return this.getToken(JSXXParser.AttrExprOpen, 0);
};

ExprOpenContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JSXXParserVisitor ) {
        return visitor.visitExprOpen(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JSXXParser.ExprOpenContext = ExprOpenContext;

JSXXParser.prototype.exprOpen = function() {

    var localctx = new ExprOpenContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, JSXXParser.RULE_exprOpen);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 136;
        _la = this._input.LA(1);
        if(!(_la===JSXXParser.HTMLExprOpen || _la===JSXXParser.AttrExprOpen)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExprCloseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JSXXParser.RULE_exprClose;
    return this;
}

ExprCloseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprCloseContext.prototype.constructor = ExprCloseContext;


ExprCloseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JSXXParserVisitor ) {
        return visitor.visitExprClose(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JSXXParser.ExprCloseContext = ExprCloseContext;

JSXXParser.prototype.exprClose = function() {

    var localctx = new ExprCloseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, JSXXParser.RULE_exprClose);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 138;
        this.match(JSXXParser.ExprClose);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EndExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = JSXXParser.RULE_endExpr;
    return this;
}

EndExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EndExprContext.prototype.constructor = EndExprContext;

EndExprContext.prototype.exprOpen = function() {
    return this.getTypedRuleContext(ExprOpenContext,0);
};

EndExprContext.prototype.End = function() {
    return this.getToken(JSXXParser.End, 0);
};

EndExprContext.prototype.exprClose = function() {
    return this.getTypedRuleContext(ExprCloseContext,0);
};

EndExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof JSXXParserVisitor ) {
        return visitor.visitEndExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




JSXXParser.EndExprContext = EndExprContext;

JSXXParser.prototype.endExpr = function() {

    var localctx = new EndExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, JSXXParser.RULE_endExpr);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 140;
        this.exprOpen();
        this.state = 141;
        this.match(JSXXParser.End);
        this.state = 142;
        this.exprClose();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
